--- a/easySlimAssets/easySlimAssets.xcodeproj/xcshareddata/xcschemes/easySlimAssets.xcscheme
+++ b/easySlimAssets/easySlimAssets.xcodeproj/xcshareddata/xcschemes/easySlimAssets.xcscheme
@@ -15,7 +15,7 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "2A599201263BF2B100373533"
-               BuildableName = "easySlimAssets.app"
+               BuildableName = "SlimAssets.app"
                BlueprintName = "easySlimAssets"
                ReferencedContainer = "container:easySlimAssets.xcodeproj">
             </BuildableReference>
@@ -31,7 +31,7 @@
       </Testables>
    </TestAction>
    <LaunchAction
-      buildConfiguration = "Release"
+      buildConfiguration = "Debug"
       selectedDebuggerIdentifier = ""
       selectedLauncherIdentifier = "Xcode.IDEFoundation.Launcher.PosixSpawn"
       launchStyle = "0"
@@ -45,7 +45,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "2A599201263BF2B100373533"
-            BuildableName = "easySlimAssets.app"
+            BuildableName = "SlimAssets.app"
             BlueprintName = "easySlimAssets"
             ReferencedContainer = "container:easySlimAssets.xcodeproj">
          </BuildableReference>
@@ -62,7 +62,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "2A599201263BF2B100373533"
-            BuildableName = "easySlimAssets.app"
+            BuildableName = "SlimAssets.app"
             BlueprintName = "easySlimAssets"
             ReferencedContainer = "container:easySlimAssets.xcodeproj">
          </BuildableReference>
